# quick-start-app

./: .gitignore  Makefile  README.md  common.mk  config_project
libsrvkit/: CMakeLists.txt  Makefile
libsrvkit/conf/: echo_mid_srv.json  echo_srv.json  srv.json
libsrvkit/gentool/: CMakeLists.txt  Makefile  file_gen.c  file_gen.cc  file_gen.h  file_parser.c  file_parser.cc  file_parser.h  gentool.c  gentool.cc  lex.yy.c  mysql_query.l  mysql_query.y  orm_file_gen.c  orm_file_gen.h  proto.h  y.tab.c  y.tab.h
libsrvkit/src/: .mysql_wrapper.cc.swp  async_task.cc  async_task.h  canal.cc  canal.h  co_routine.cc  co_routine.h  coctx.h  conf.cc  connector.cc  connector.h  event.cc  http.cc  http.h  http2_client.cc  http2_client.h  http_client.cc  http_client.h  kafka.cc  kafka.h  mc.cc  misc.cc  monitor_func.cc  monitor_func.h  mysql.orm  mysql_wrapper.cc  mysql_wrapper.h  net.cc  net.h  pb.cc  redis.cc  redis.h  rpc_context.cc  server.cc  server.h  server_inner.h  swoole.cc  swoole_def.h  timer_def.cc  timer_def.h  (+2 more)
libsrvkit/test/: CMakeLists.txt  mysql_test.cc  ut_timer.cc  ut_zk.cc
libsrvkit/test/echocli/: echo_cli.c  echo_press_cli.c  gen_echo_mid_srv.pb.cc  gen_echo_mid_srv.pb.h
libsrvkit/test/echosrv/: echo_srv.c  gen_echosrv.pb.cc  gen_echosrv.pb.h  proto_test_srv_echosrv.cc  proto_test_srv_echosrv.h  proto_test_srv_echosrv_imp.cc  proto_test_srv_echosrv_imp.h
libsrvkit/test/kafka/: consumer.proto  producer.proto
libsrvkit/test/mid_echo_srv/: gen_echo_mid_srv.pb.cc  gen_echo_mid_srv.pb.h  gen_echosrv.pb.cc  gen_echosrv.pb.h  gen_swoole_test.pb.cc  (+10 more)
util/: t  (+2 more)
(+149 files in other folders)
