INCLUDE($ENV{CMAKE}/common/prep.cmake)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(srvkit)

SET(TARGET_NAME server)
SET(TARGET_TYPE ARCHIVE)

SET(NEED_UTIL TRUE)
SET(NEED_PROTO TRUE)
SET(NEED_PROTOBUF TRUE)
SET(NEED_HIREDIS TRUE)
SET(NEED_JSON TRUE)
SET(NEED_MYSQL TRUE)
SET(NEED_NGHTTP2 TRUE)
SET(NEED_OPENSSL TRUE)
SET(NEED_RDKAFKA TRUE)
SET(NEED_ZK TRUE)

SET(SDK_LIB_NAME libsrvkit)

ENABLE_LANGUAGE(ASM)
SET(INCLUDE_SOURCE_FILES ./src/coctx_swap.S)

INCLUDE($ENV{CMAKE}/common/target.cmake)

ADD_SUBDIRECTORY(gentool)
